fixed alignment issues | removed navbar transparency

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ ul {
 }
 
 .container {
-  width: 1140px auto;
+  width: 1140px;
   padding: 0px 15px;
   margin: auto;
 }
