--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,6 @@
 .header {
   width: 100%;
   line-height: 70px;
-  background-color: "transparent";
-  backdrop-filter: blur(10px);
-  position: fixed;
-  z-index: 999;
 }
 
 .nav_container {
